added favicon.ico, added colors to the equalizer when invalid, added inputs to the equalizer and changed the tab sequence so that you can tab through them, updateSpeakerTarget now works, changed the DB so the the Target and Equalizer tables now have a primary key on the name instead of the id, added a couple variabls to tell if there is an error in the preset values

--- a/software/src/omaha/templates/components/login-form.html
+++ b/software/src/omaha/templates/components/login-form.html
@@ -9,6 +9,8 @@
 <link rel="import" href="/bower_components/paper-styles/paper-styles.html">
 <link rel="import" href="/bower_components/paper-toast/paper-toast.html">
 
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/ >
+
 <dom-module id="login-form">
   <template>
     <style>
