--- a/software/src/omaha/templates/components/zones/zone-map-controller.html
+++ b/software/src/omaha/templates/components/zones/zone-map-controller.html
@@ -14,6 +14,7 @@
 <link rel="import" href="/bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="/components/speaker-icon.html">
 <link rel="import" href="/components/zones/zone-assigner.html">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/ >
 
 <dom-module id="zone-map-controller" class="layout horizontal">
   <template>
