--- a/software/src/omaha/templates/app.html
+++ b/software/src/omaha/templates/app.html
@@ -15,6 +15,7 @@
   <link rel="import" href="/components/omaha-app.html">
 
   <link rel="stylesheet" href="/css/styles.css">
+<link rel="shortcut icon" href="/components/favicon.ico" type="image/x-icon"/ >
 </head>
 
 <body unresolved style="height: 100%;">
