--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -77,28 +77,28 @@
    <paper-card heading="Equalizer" elevation="4">
       <div class="card-content">
         <div id="sliderequalizer" class="layout horizontal">
-          <div id="custom_container"> 
-            <div class="custom one"> <input id="text1" class="level"/> <div class="custom_slider" value="{{internalEqualizer}}"></div><input class="bands" id="eighty" value="80" readonly/></div>
-            <div class="custom two"> <input id="text2" class="level" readonly/> <div class="custom_slider" value={{"equalizer2"}}></div><input class="bands" value="100" readonly/></div>
-            <div class="custom three"> <input id="text3" class="level" readonly/> <div class="custom_slider" value={{"equalizer3"}}></div><input class="bands" value="125" readonly/></div>
-            <div class="custom four"> <input id="text4" class="level" readonly/><div class="custom_slider" value={{"equalizer4"}}></div><input class="bands" value="160" readonly/></div>
-            <div class="custom five"> <input id="text5" class="level" readonly/> <div class="custom_slider" value={{"equalizer5"}}></div><input class="bands" value="200" readonly/></div>
-            <div class="custom six"> <input id="text6" class="level" readonly/> <div class="custom_slider" value={{"equalizer6"}}></div><input class="bands" value="250" readonly/></div>
-            <div class="custom seven"> <input id="text7" class="level" readonly/> <div class="custom_slider" value={{"equalizer7"}}></div><input class="bands" value="315" readonly/></div>
-            <div class="custom eight"> <input id="text8" class="level" readonly/> <div class="custom_slider" value={{"equalizer8"}}></div><input class="bands" value="400" readonly/></div>
-            <div class="custom nine"> <input id="text9" class="level" readonly/> <div class="custom_slider" value={{"equalizer9"}}></div><input class="bands" value="500" readonly/></div>
-            <div class="custom ten"> <input id="text10" class="level" readonly/> <div class="custom_slider" value={{"equalizer10"}}></div><input class="bands" value="630" readonly/></div>
-            <div class="custom eleven"> <input id="text11" class="level" readonly/> <div class="custom_slider" value={{"equalizer11"}}></div><input class="bands" value="800" readonly/></div>
-            <div class="custom twelve"> <input id="text12" class="level" readonly/> <div class="custom_slider" value={{"equalizer12"}}></div><input class="bands" value="1k" readonly/></div>
-            <div class="custom thirteen"> <input id="text13" class="level" readonly/> <div class="custom_slider" value={{"equalizer13"}}></div><input class="bands" value="1.25k" readonly/></div>
-            <div class="custom fourteen"> <input id="text14" class="level" readonly/> <div class="custom_slider" value={{"equalizer14"}}></div><input class="bands" value="1.6k" readonly/></div>
-            <div class="custom fifteen"> <input id="text15" class="level" readonly/> <div class="custom_slider" value={{"equalizer15"}}></div><input class="bands" value="2k" readonly/></div>
-            <div class="custom sixteen"> <input id="text16" class="level" readonly/> <div class="custom_slider" value={{"equalizer16"}}></div><input class="bands" value="2.5k" readonly/></div>
-            <div class="custom seventeen"> <input id="text17" class="level" readonly/> <div class="custom_slider" value={{"equalizer17"}}></div><input class="bands" value="3.15k" readonly/></div>
-            <div class="custom eighteen"> <input id="text18" class="level" readonly/> <div class="custom_slider" value={{"equalizer18"}}></div><input class="bands" value="4k" readonly/></div>
-            <div class="custom nineteen"> <input id="text19" class="level" readonly/> <div class="custom_slider" value={{"equalizer19"}}></div><input class="bands" value="5k" readonly/></div>
-            <div class="custom twenty"> <input id="text20" class="level" readonly/> <div class="custom_slider" value={{"equalizer20"}}></div><input class="bands" value="6.3k" readonly/></div>
-            <div class="custom twentyone"> <input id="text21" class="level" readonly/> <div class="custom_slider" value={{"equalizer21"}></div><input class="bands" value="8k" readonly/></div>
+          <div id="custom_container">
+            <div class="custom one"> <input id="text1" class="level" tabindex=1 oninput="inputChanged()"/> <div class="custom_slider" value="{{internalEqualizer}}"></div><input class="bands" id="eighty" value="80" readonly/></div>
+            <div class="custom two"> <input id="text2" class="level" tabindex=2 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer2"}}></div><input class="bands" value="100" readonly/></div>
+            <div class="custom three"> <input id="text3" class="level" tabindex=3 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer3"}}></div><input class="bands" value="125" readonly/></div>
+            <div class="custom four"> <input id="text4" class="level" tabindex=4 oninput="inputChanged()"/><div class="custom_slider" value={{"equalizer4"}}></div><input class="bands" value="160" readonly/></div>
+            <div class="custom five"> <input id="text5" class="level" tabindex=5 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer5"}}></div><input class="bands" value="200" readonly/></div>
+            <div class="custom six"> <input id="text6" class="level" tabindex=6 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer6"}}></div><input class="bands" value="250" readonly/></div>
+            <div class="custom seven"> <input id="text7" class="level" tabindex=7 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer7"}}></div><input class="bands" value="315" readonly/></div>
+            <div class="custom eight"> <input id="text8" class="level" tabindex=8 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer8"}}></div><input class="bands" value="400" readonly/></div>
+            <div class="custom nine"> <input id="text9" class="level" tabindex=9 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer9"}}></div><input class="bands" value="500" readonly/></div>
+            <div class="custom ten"> <input id="text10" class="level" tabindex=10 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer10"}}></div><input class="bands" value="630" readonly/></div>
+            <div class="custom eleven"> <input id="text11" class="level" tabindex=11 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer11"}}></div><input class="bands" value="800" readonly/></div>
+            <div class="custom twelve"> <input id="text12" class="level" tabindex=12 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer12"}}></div><input class="bands" value="1k" readonly/></div>
+            <div class="custom thirteen"> <input id="text13" class="level" tabindex=13 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer13"}}></div><input class="bands" value="1.25k" readonly/></div>
+            <div class="custom fourteen"> <input id="text14" class="level" tabindex=14 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer14"}}></div><input class="bands" value="1.6k" readonly/></div>
+            <div class="custom fifteen"> <input id="text15" class="level" tabindex=15 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer15"}}></div><input class="bands" value="2k" readonly/></div>
+            <div class="custom sixteen"> <input id="text16" class="level" tabindex=16 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer16"}}></div><input class="bands" value="2.5k" readonly/></div>
+            <div class="custom seventeen"> <input id="text17" class="level" tabindex=17 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer17"}}></div><input class="bands" value="3.15k" readonly/></div>
+            <div class="custom eighteen"> <input id="text18" class="level" tabindex=18 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer18"}}></div><input class="bands" value="4k" readonly/></div>
+            <div class="custom nineteen"> <input id="text19" class="level" tabindex=19 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer19"}}></div><input class="bands" value="5k" readonly/></div>
+            <div class="custom twenty"> <input id="text20" class="level" tabindex=20 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer20"}}></div><input class="bands" value="6.3k" readonly/></div>
+            <div class="custom twentyone"> <input id="text21" class="level" tabindex=21 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer21"}></div><input class="bands" value="8k" readonly/></div>
           </div>
         </div>
       </div>
@@ -138,7 +138,7 @@
         <span>{{value}}</span>
       </div>
     </paper-card>
-    <paper-toast id="toast">Equalizer set to <span>{{iirConstantsString}}</span></paper-toast>
+    <paper-toast id="equalizerToast">Equalizer set to <span>{{iirConstantsString}}</span></paper-toast>
     <paper-toast id="toasty" z-index: "60" text="varaitic toast message this is, seeing this you are, please dial 867-5309 you should; nah but just tell me bro"></paper-toast>
 
     <iron-ajax
@@ -154,11 +154,16 @@
   </template>
   <script>
 
+  var sliders = document.getElementsByClassName("ui-slider-range ui-widget-header ui-corner-all ui-slider-range-min");
+  var handles = document.getElementsByClassName("ui-slider-handle ui-state-default ui-corner-all");
+  var background = document.getElementsByClassName("custom_slider style-scope equalizer-controller ui-slider ui-slider-vertical ui-widget ui-widget-content ui-corner-all");
+
   //var fragment = create("<paper-item id=" + "name" + " value=" + "custom" + ">" + "custom" + "</paper-item>"); 
   $(document).ready(function() {
   });
   
   var lastSelected = 0;
+  var isThereAnError = false;
 //  document.getElementById(equalizerListbox).selected = "Currently Applied";
 
   //PresetNames[] = {"hi", "my", "name", "is", "scott"};
@@ -202,7 +207,7 @@
       _setEqualizerClicked: function() {
         this.equalizer = iirConstants.join(" ");  // this gets sent to the backend because Go's Fields(String) function works only with whitespaces
         this.iirConstantsString = iirConstants.join(", ");  // this is for the toast message
-        //this.$.toast.show();
+        this.$.equalizerToast.show();
         console.log("_setEqualizerClicked");
         console.log(iirConstants);
         
@@ -331,8 +336,8 @@
 
         var selected = this.$.equalizerListbox.selected.valueOf().toLowerCase().replace("\n", "");   // do this for all whitespace character
 
-        var sliders = document.getElementsByClassName("ui-slider-range ui-widget-header ui-corner-all ui-slider-range-min");
-        var handles = document.getElementsByClassName("ui-slider-handle ui-state-default ui-corner-all");
+        //var sliders = document.getElementsByClassName("ui-slider-range ui-widget-header ui-corner-all ui-slider-range-min");
+        //var handles = document.getElementsByClassName("ui-slider-handle ui-state-default ui-corner-all");
 
         if(selected == "currently applied") {
           this.$.toasty.text = "Currently applied constants loaded! " + iirConstants.join(", ");
@@ -395,10 +400,51 @@
         elem.$.volume2._resetKnob();
       },
 
+      showToast: function() {
+        console.log("gi");
+      },
+
       ready: function() {
         this.internalEqualizer = this.iirConstantsString;   // does this need to be equalizer?
       }
     });
+
+      function showToast() {
+        console.log("gi");
+      }
+
+    function inputChanged() {
+        var error = false;
+      $(document.getElementsByClassName("level")).each(function(i) {
+        console.log(this.value);
+        if(isNaN(this.value) || this.value == "" || this.value < -40 || this.value > 10) {
+          error = true;
+          //this.value = "what to put here";
+          //sliders[i].style.height = null;
+          //handles[i].style.bottom = null;
+          sliders[i].style.background = "#F33F31";
+          handles[i].style.background = "#F33F31";
+          background[i].style.background = "rgba(243, 63, 49, .2)";
+          
+        } else {        
+          iirConstants[i] = parseInt(this.value);
+          sliders[i].style.background = "#3f51b5";
+          handles[i].style.background = "#3f51b5";
+          background[i].style.background = "rgba(63, 81, 181, .2)";
+          sliders[i].style.height = (iirConstants[i] + 40) * 2 + "%";
+          handles[i].style.bottom = (iirConstants[i] + 40) * 2 + "%";
+        }
+      });
+        console.log(error);
+
+        if(error == false) {      // see if we can simplify this
+          isThereAnError = false;
+        } else {
+          isThereAnError = true;
+        }
+
+        console.log(isThereAnError);
+    }
 
 // there was some script endings and shit here, putem back if shit fucks up
 
@@ -447,8 +493,33 @@
     
     // make the equalizer get the constants out to the database here
 
-    
+    $(function() {
+      $(document.getElementsByClassName("custom_slider")).each(function(i) {
 
+      //console.log(this);
+
+      $(this).slider({
+        orientation: "vertical",
+        range: "min",
+        //step: .5,
+        min: -40,
+        max: 10,
+        value: 0,
+        slide: function( event, ui) {
+          isThereAnError = false;
+          sliders[i].style.background = "#3f51b5";
+          handles[i].style.background = "#3f51b5";
+          background[i].style.background = "rgba(63, 81, 181, .2)";
+          $("#text" + (i + 1)).val(ui.value);
+          iirConstants[i] = ui.value;
+        }
+      });
+      $("#text" + (i + 1)).val($(".custom > .custom_slider").slider("value"));
+    });
+
+  });
+    
+/*
     $(function() {
       $( ".custom.one > .custom_slider" ).slider({
         orientation: "vertical",
@@ -458,6 +529,9 @@
         max: 10,
         value: 0,
         slide: function( event, ui) {
+          sliders[0].style.background = "#3f51b5";
+          handles[0].style.background = "#3f51b5";      // try to revamp this to make this better
+          background[0].style.background = "rgba(63, 81, 181, .2)";
           $( "#text1" ).val( ui.value);
           iirConstants[0] = ui.value;
           //console.log(iirConstants[0] + " - | - " + ui.value);    // remove all of these when finished with them
@@ -703,9 +777,9 @@
           iirConstants[20] = ui.value;
           //console.log(iirConstants[20] + " - | - " + ui.value);
         }
-      });
+      });*/
 
-      $( "#text1" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
+      /*$( "#text1" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
       $( "#text2" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
       $( "#text3" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
       $( "#text4" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
@@ -725,8 +799,8 @@
       $( "#text18" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
       $( "#text19" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
       $( "#text20" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
-      $( "#text21" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );
-    });
+      $( "#text21" ).val( $( ".custom > .custom_slider" ).slider( "value" ) );*/
+    //});
 
   } else {
       console.log("there is not enough space to display the equalizer");
