--- a/software/src/omaha/templates/css/styles.css
+++ b/software/src/omaha/templates/css/styles.css
@@ -85,7 +85,7 @@ paper-tabs paper-tab.iron-selected {
 
   /* Square */
   border-radius: 4px;
-  border: 5px solid #d3d3d3;
+  border: 3px solid #d3d3d3;
   margin-bottom: calc(-.008 * 100vw);
   margin-left: calc(-.006 * 100vw);
   width: calc(.022 * 100vw);
@@ -154,9 +154,9 @@ paper-tabs paper-tab.iron-selected {
   /*
   color: #f6931f; 
   */
-  border: 1px;
+  /*border: 1px;
   border-style: solid;
-  border-color: #3f51b5;
+  border-color: #3f51b5;*/
 
   font-weight: bold; 
   font-size: calc(.018 * 100vw);
