--- a/software/src/omaha/templates/login.html
+++ b/software/src/omaha/templates/login.html
@@ -14,6 +14,7 @@
     <link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
     <link rel="import" href="/components/login-form.html">
     <link rel="stylesheet" href="/css/styles.css">
+  <link rel="shortcut icon" href="/components/favicon.ico" type="image/x-icon"/ >
   </head>
   <body unresolved>
     <div class="full-container layout horizontal">
