added KeepAlive and some basic error handling to it, also added error handling to the button clicks of target and equalizer controllers

--- a/software/src/omaha/templates/components/information-viewer.html
+++ b/software/src/omaha/templates/components/information-viewer.html
@@ -106,7 +106,7 @@
         </paper-dropdown-menu>
       </paper-card>
     </div>
-
+                    <!-- A rougue missing tag, why is this here? -->
     <paper-toast id="toast"></span>Zone Created!</paper-toast>
     <paper-card id="popup">
       <div>Current Zone: <span><b>{{selected.zone.name}}</b></span></div>
