--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -78,27 +78,27 @@
       <div class="card-content">
         <div id="sliderequalizer" class="layout horizontal">
           <div id="custom_container">
-            <div class="custom one"> <input id="text1" class="level" tabindex=1 oninput="inputChanged()"/> <div class="custom_slider" value="{{internalEqualizer}}"></div><input class="bands" id="eighty" value="80" readonly/></div>
-            <div class="custom two"> <input id="text2" class="level" tabindex=2 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer2"}}></div><input class="bands" value="100" readonly/></div>
-            <div class="custom three"> <input id="text3" class="level" tabindex=3 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer3"}}></div><input class="bands" value="125" readonly/></div>
-            <div class="custom four"> <input id="text4" class="level" tabindex=4 oninput="inputChanged()"/><div class="custom_slider" value={{"equalizer4"}}></div><input class="bands" value="160" readonly/></div>
-            <div class="custom five"> <input id="text5" class="level" tabindex=5 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer5"}}></div><input class="bands" value="200" readonly/></div>
-            <div class="custom six"> <input id="text6" class="level" tabindex=6 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer6"}}></div><input class="bands" value="250" readonly/></div>
-            <div class="custom seven"> <input id="text7" class="level" tabindex=7 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer7"}}></div><input class="bands" value="315" readonly/></div>
-            <div class="custom eight"> <input id="text8" class="level" tabindex=8 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer8"}}></div><input class="bands" value="400" readonly/></div>
-            <div class="custom nine"> <input id="text9" class="level" tabindex=9 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer9"}}></div><input class="bands" value="500" readonly/></div>
-            <div class="custom ten"> <input id="text10" class="level" tabindex=10 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer10"}}></div><input class="bands" value="630" readonly/></div>
-            <div class="custom eleven"> <input id="text11" class="level" tabindex=11 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer11"}}></div><input class="bands" value="800" readonly/></div>
-            <div class="custom twelve"> <input id="text12" class="level" tabindex=12 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer12"}}></div><input class="bands" value="1k" readonly/></div>
-            <div class="custom thirteen"> <input id="text13" class="level" tabindex=13 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer13"}}></div><input class="bands" value="1.25k" readonly/></div>
-            <div class="custom fourteen"> <input id="text14" class="level" tabindex=14 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer14"}}></div><input class="bands" value="1.6k" readonly/></div>
-            <div class="custom fifteen"> <input id="text15" class="level" tabindex=15 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer15"}}></div><input class="bands" value="2k" readonly/></div>
-            <div class="custom sixteen"> <input id="text16" class="level" tabindex=16 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer16"}}></div><input class="bands" value="2.5k" readonly/></div>
-            <div class="custom seventeen"> <input id="text17" class="level" tabindex=17 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer17"}}></div><input class="bands" value="3.15k" readonly/></div>
-            <div class="custom eighteen"> <input id="text18" class="level" tabindex=18 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer18"}}></div><input class="bands" value="4k" readonly/></div>
-            <div class="custom nineteen"> <input id="text19" class="level" tabindex=19 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer19"}}></div><input class="bands" value="5k" readonly/></div>
-            <div class="custom twenty"> <input id="text20" class="level" tabindex=20 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer20"}}></div><input class="bands" value="6.3k" readonly/></div>
-            <div class="custom twentyone"> <input id="text21" class="level" tabindex=21 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer21"}></div><input class="bands" value="8k" readonly/></div>
+            <div class="custom one"> <input id="text1" name="80" class="level" tabindex=1 oninput="inputChanged()"/> <div class="custom_slider" value="{{internalEqualizer}}"></div><input class="bands" id="eighty" value="80" readonly/></div>
+            <div class="custom two"> <input id="text2" name="100" class="level" tabindex=2 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer2"}}></div><input class="bands" value="100" readonly/></div>
+            <div class="custom three"> <input id="text3" name="125" class="level" tabindex=3 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer3"}}></div><input class="bands" value="125" readonly/></div>
+            <div class="custom four"> <input id="text4" name="160" class="level" tabindex=4 oninput="inputChanged()"/><div class="custom_slider" value={{"equalizer4"}}></div><input class="bands" value="160" readonly/></div>
+            <div class="custom five"> <input id="text5" name="200" class="level" tabindex=5 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer5"}}></div><input class="bands" value="200" readonly/></div>
+            <div class="custom six"> <input id="text6" name="250" class="level" tabindex=6 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer6"}}></div><input class="bands" value="250" readonly/></div>
+            <div class="custom seven"> <input id="text7" name="315" class="level" tabindex=7 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer7"}}></div><input class="bands" value="315" readonly/></div>
+            <div class="custom eight"> <input id="text8" name="400" class="level" tabindex=8 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer8"}}></div><input class="bands" value="400" readonly/></div>
+            <div class="custom nine"> <input id="text9" name="500" class="level" tabindex=9 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer9"}}></div><input class="bands" value="500" readonly/></div>
+            <div class="custom ten"> <input id="text10" name="630" class="level" tabindex=10 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer10"}}></div><input class="bands" value="630" readonly/></div>
+            <div class="custom eleven"> <input id="text11" name="800" class="level" tabindex=11 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer11"}}></div><input class="bands" value="800" readonly/></div>
+            <div class="custom twelve"> <input id="text12" name="1k" class="level" tabindex=12 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer12"}}></div><input class="bands" value="1k" readonly/></div>
+            <div class="custom thirteen"> <input id="text13" name="1.25k" class="level" tabindex=13 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer13"}}></div><input class="bands" value="1.25k" readonly/></div>
+            <div class="custom fourteen"> <input id="text14" name="1.6k" class="level" tabindex=14 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer14"}}></div><input class="bands" value="1.6k" readonly/></div>
+            <div class="custom fifteen"> <input id="text15" name="2k" class="level" tabindex=15 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer15"}}></div><input class="bands" value="2k" readonly/></div>
+            <div class="custom sixteen"> <input id="text16" name="2.5k" class="level" tabindex=16 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer16"}}></div><input class="bands" value="2.5k" readonly/></div>
+            <div class="custom seventeen"> <input id="text17" name="3.15k" class="level" tabindex=17 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer17"}}></div><input class="bands" value="3.15k" readonly/></div>
+            <div class="custom eighteen"> <input id="text18" name="4k" class="level" tabindex=18 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer18"}}></div><input class="bands" value="4k" readonly/></div>
+            <div class="custom nineteen"> <input id="text19" name="5k" class="level" tabindex=19 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer19"}}></div><input class="bands" value="5k" readonly/></div>
+            <div class="custom twenty"> <input id="text20" name="6.3k" class="level" tabindex=20 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer20"}}></div><input class="bands" value="6.3k" readonly/></div>
+            <div class="custom twentyone"> <input id="text21" name="8k" class="level" tabindex=21 oninput="inputChanged()"/> <div class="custom_slider" value={{"equalizer21"}></div><input class="bands" value="8k" readonly/></div>
           </div>
         </div>
       </div>
@@ -138,8 +138,8 @@
         <span>{{value}}</span>
       </div>
     </paper-card>
-    <paper-toast id="equalizerToast">Equalizer set to <span>{{iirConstantsString}}</span></paper-toast>
-    <paper-toast id="toasty" z-index: "60" text="varaitic toast message this is, seeing this you are, please dial 867-5309 you should; nah but just tell me bro"></paper-toast>
+    <paper-toast id="equalizerToast"></paper-toast>
+    <paper-toast id="toasty" z-index: "60"></paper-toast>
 
     <iron-ajax
       id="addPresetAjax"
@@ -205,14 +205,41 @@
       },
       
       _setEqualizerClicked: function() {
-        this.equalizer = iirConstants.join(" ");  // this gets sent to the backend because Go's Fields(String) function works only with whitespaces
-        this.iirConstantsString = iirConstants.join(", ");  // this is for the toast message
-        this.$.equalizerToast.show();
-        console.log("_setEqualizerClicked");
-        console.log(iirConstants);
-        
-        for (var i = 0; i < this.speaker.CurrentPreset.length; i++) { 
-          this.speaker.CurrentPreset[i] = iirConstants[i];
+        var checkInt = 0;
+        var checkBands = [];
+        var equalizerText = "Invalid input at ";
+
+        $(document.getElementsByClassName("level")).each(function(i) {
+          if(isNaN(this.value) || this.value == "" || this.value < -40 || this.value > 10) {
+            console.log(this.name);
+            checkInt++;
+            checkBands.push(this.name); // may have to put new string here
+          }
+        });
+
+        if(checkInt > 0) {
+          if(checkBands.length == 1) {
+            equalizerText += checkBands[0] + "Hz";
+          } else {
+            for (var i = 0; i < checkBands.length - 1; i++) {
+              equalizerText += checkBands[i] + "Hz, "
+            }
+            equalizerText += "and " + checkBands[checkBands.length - 1] + "Hz";
+          }
+          this.$.equalizerToast.duration = 2000 + (500 * checkBands.length);
+          this.$.equalizerToast.text = equalizerText;
+          this.$.equalizerToast.show();
+        } else {
+          this.equalizer = iirConstants.join(" ");  // this gets sent to the backend because Go's Fields(String) function works only with whitespaces
+          this.iirConstantsString = iirConstants.join(", ");  // this is for the toast message
+          this.$.equalizerToast.text = "Equalizer set to " + this.iirConstantsString;
+          this.$.equalizerToast.show();
+          console.log("_setEqualizerClicked");
+          console.log(iirConstants);
+          
+          for (var i = 0; i < this.speaker.CurrentPreset.length; i++) { 
+            this.speaker.CurrentPreset[i] = iirConstants[i];
+          }
         }
       },
 
