made the frontend of the keep alive - this is controlled by the system status struct in the backend backend, added a handler to do this and a few functions

--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -159,6 +159,8 @@
   var background = document.getElementsByClassName("custom_slider style-scope equalizer-controller ui-slider ui-slider-vertical ui-widget ui-widget-content ui-corner-all");
 
   //var fragment = create("<paper-item id=" + "name" + " value=" + "custom" + ">" + "custom" + "</paper-item>"); 
+  var equalizerToast = 0;
+
   $(document).ready(function() {
   });
   
@@ -205,6 +207,7 @@
       },
       
       _setEqualizerClicked: function() {
+
         var checkInt = 0;
         var checkBands = [];
         var equalizerText = "Invalid input at ";
@@ -433,6 +436,7 @@
 
       ready: function() {
         this.internalEqualizer = this.iirConstantsString;   // does this need to be equalizer?
+        equalizerToast = this.$.equalizerToast;
       }
     });
 
